--- a/react-props/package.json
+++ b/react-props/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-demo",
+  "name": "react-props",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jquery": "^3.2.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
