--- a/es6-demo/package.json
+++ b/es6-demo/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "react-demo",
+  "name": "es6-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
